menambah halaman contact

--- a/contact-us.html
+++ b/contact-us.html
@@ -8,7 +8,7 @@
 <body>
     <header>disini header</header>
     <h1>AYO BELAJAR GIT</h1>
-   <p>Belajar GIT sejak dini</p> 
+   <div>ini adalah halaman contact yang berisi form</div>
 
 <footer>ini adalah footer</footer>
 </body>
