membuat form di dalam kontak

--- a/contact-us.html
+++ b/contact-us.html
@@ -10,6 +10,8 @@
     <h1>AYO BELAJAR GIT</h1>
    <div>ini adalah halaman contact yang berisi form</div>
 
+    <form action=""></form>
+
 <footer>ini adalah footer</footer>
 </body>
 </html>
